fix: dropdown icon in goal tile is not center aligned

--- a/src/pages/MyGoalsPage/MyGoalsPage.scss
+++ b/src/pages/MyGoalsPage/MyGoalsPage.scss
@@ -114,6 +114,11 @@
   width: 100%;  
 }
 
+.goal-dropdown {
+  align-self: center;
+  padding-left: 2%;
+}
+
 #addGoalForm{
   .mygoalsbutton-dark, .mygoalsbutton-light {
     display: none;
